// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Prettier config with snapshot > astro preset > matches snapshot with astro file 1`] = `
{
  "arrowParens": "always",
  "endOfLine": "lf",
  "jsxSingleQuote": false,
  "parser": "astro",
  "plugins": [
    "prettier-plugin-astro",
  ],
  "quoteProps": "consistent",
  "semi": true,
  "singleQuote": false,
  "tabWidth": 2,
  "trailingComma": "all",
}
`;

exports[`Test Prettier config with snapshot > astro preset > matches snapshot with normal file 1`] = `
{
  "arrowParens": "always",
  "endOfLine": "lf",
  "jsxSingleQuote": false,
  "plugins": [
    "prettier-plugin-astro",
  ],
  "quoteProps": "consistent",
  "semi": true,
  "singleQuote": false,
  "tabWidth": 2,
  "trailingComma": "all",
}
`;

exports[`Test Prettier config with snapshot > normal preset > matches snapshot 1`] = `
{
  "arrowParens": "always",
  "endOfLine": "lf",
  "jsxSingleQuote": false,
  "quoteProps": "consistent",
  "semi": true,
  "singleQuote": false,
  "tabWidth": 2,
  "trailingComma": "all",
}
`;
